Fixed line wrap on meeting card

--- a/styles/pages/projects.scss
+++ b/styles/pages/projects.scss
@@ -3,8 +3,9 @@
 @import "../base/animations";
 
 /*
-FAQ page layout.
+Projects page layout.
  */
+
 .projects-section-light {
   color: $neutral-900;
   background-color: $secondary-50;
@@ -14,6 +15,11 @@ FAQ page layout.
   gap: 24px;
 
   @media (max-width: $screen-lg) {
+    flex-direction: column;
+    gap: 48px;
+  }
+
+  @media (max-width: $screen-md) {
     padding: 48px 40px;
     flex-direction: column;
   }
@@ -131,13 +137,20 @@ FAQ page layout.
     .meeting-card-list-item-text {
       margin-left: 10px;
     }
+
+    li {
+      white-space: nowrap;
+    }
   }
 
   @media (min-width: $screen-lg) {
     border: 1px solid $neutral-500;
     border-radius: 20px;
     min-width: 402px;
-    max-width: 402px;
+
+    .meeting-card-heading {
+      max-width: 320px;
+    }
 
     .meeting-card-container,
     ul {
